# parse-embedded-sdks

./: .gitignore  CONTRIBUTING.md  COPYING  INSTALL  LICENSE  Makefile.am  README.md  configure.ac  makefile.inc
api/: dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals_defs.html  globals_type.html  parse_8h_source.html
api/search/: all_1.js  defines_3.js  defines_4.js  functions_0.js  searchdata.js  typedefs_0.js
cc3200/: README.md  makefile.inc
cc3200/samples/blink/: .ccsproject  .cproject  .project  blink.c  blink.h  blink.ld  board.c  button.c  cc3200v1p32.cmd  config.c  json.c  led.c  main.c  makefile  network.c  pinmux.h  time.c  urlencode.c
cc3200/samples/quickstart/: .cproject  .project  README  main.c  makefile  pinmux.c  quickstart.ld
cc3200/src/: .ccsproject  .cproject  .project  README  cc3200_certificate.c  cc3200_client_state.c  cc3200_debug.c  cc3200_socket.c  cc3200_utils.c  certificate_file.c  client_state.c  debug.c  http.c  installation.c  makefile  parse_impl.c  parse_impl.h  platform_impl.h  push.c  request.c  session.c  socket.c  utils.c
common/: LICENSE  Makefile.am  simplejson.c  simplejson.h
common/tests/: makefile  simplejson_tests.cc
debian/: changelog  control  copyright
docs/: build_docs.sh  parse_doc_config  parse_yun_doc_config
docs/html/: globals.html  globals_func.html  index.html  parse_8h.html
docs/html/search/: all_2.js  all_4.js  defines_0.js  files_0.js  pages_0.js
docs/yun/html/: _parse_8h.html  _parse_8h_source.html  _parse_client_8h.html  _parse_client_8h_source.html  _parse_cloud_function_8h.html  _parse_cloud_function_8h_source.html  _parse_object_create_8h.html  _parse_object_create_8h_source.html  _parse_object_delete_8h.html  _parse_object_delete_8h_source.html  _parse_object_get_8h.html  _parse_object_get_8h_source.html  _parse_object_update_8h.html  _parse_object_update_8h_source.html  _parse_push_8h.html  _parse_push_8h_source.html  _parse_query_8h.html  _parse_query_8h_source.html  _parse_request_8h.html  _parse_request_8h_source.html  _parse_response_8h.html  _parse_response_8h_source.html  _parse_track_event_8h.html  _parse_track_event_8h_source.html  _parse_utils_8h.html  _parse_utils_8h_source.html  annotated.html  class_parse_client.html  class_parse_cloud_function.html  (+23 more)
include/: parse.h
mingw/src/: Makefile.am  parse.c  parse_log.c  parse_os.c  parse_time.h  parse_uuid.c
openwrt/parse-embedded/: Makefile
partners/: partner_platform_instructions.md  partner_platform_instructions.mdown  partner_quickstart_guidelines.md
rtos/: certificate.c  http.c  installation.c  parse_impl.c  parse_impl.h  push.c  request.c  session.c
unix/: Makefile.am  Makefile.openwrt-yun
unix/src/: Makefile.am  parse.c  parse_log.h  parse_os.c  parse_os.h  parse_time.c  parse_uuid.c  parse_uuid.h
unix/yun/: Makefile.am  client.c  parse_push.c  parse_request.c  utils.c  utils.h  yun.c  yun.h
yun/: Makefile  README.md  uploadLinuxPackage.sh
yun/linux_package/: Makefile  Makefile.openwrt-yun  README  parse-embedded-yun_1.0.0-1_ar71xx.ipk  parse-embedded-yun_1.0.1-1_ar71xx.ipk  parse-embedded-yun_1.0.1-rc2-1_ar71xx.ipk  parse-embedded-yun_1.0.1-rc3-1_ar71xx.ipk  parse-embedded-yun_1.0.2-1_ar71xx.ipk  parse-embedded-yun_1.0.3-1_ar71xx.ipk  parse-embedded-yun_1.0.4-1_ar71xx.ipk  parse-embedded-yun_1.0.5-1_ar71xx.ipk  parse-embedded_1.0.0-1_ar71xx.ipk  parse-embedded_1.0.1-1_ar71xx.ipk  parse-embedded_1.0.1-rc2-1_ar71xx.ipk  parse-embedded_1.0.1-rc3-1_ar71xx.ipk  parse-embedded_1.0.2-1_ar71xx.ipk  parse-embedded_1.0.3-1_ar71xx.ipk  parse-embedded_1.0.4-1_ar71xx.ipk  parse-embedded_1.0.5-1_ar71xx.ipk
(+202 files in other folders)
