if WINDOWS
SUBDIRS = mingw
else
SUBDIRS = unix
endif

cleanall:
	rm -fR Makefile.in aclocal.m4 autom4te.cache/ config config.h.in* configure m4/ config.h config.log config.status libtool stamp-h1 Makefile unix/libparse* unix/.deps unix/.libs/ common/.deps common/.libs common/Makefile common/Makefile.in unix/Makefile unix/Makefile.in mingw/libparse* mingw/.deps mingw/.libs/ common/.deps common/.libs common/Makefile common/Makefile.in mingw/Makefile mingw/Makefile.in 
